--- a/app/last-minecraft-version/index.html
+++ b/app/last-minecraft-version/index.html
@@ -6,8 +6,8 @@
     <title>Minecraft最終バージョン</title>
 </head>
 <body>
-    <h2 style="display:inline>Java版：</h2><h2 id="je">アップデートを取得中...</h2>
-    <h2 style="display:inline>統合版：</h2><h2 id="be">アップデートを取得中...</h2>
+    <h2 style="display:inline">Java版：</h2><h2 id="je">アップデートを取得中...</h2>
+    <h2 style="display:inline">統合版：</h2><h2 id="be">アップデートを取得中...</h2>
     <script>
         // JSONを取得し処理する関数
         async function fetchAndProcessJSON() {
