--- a/app/last-minecraft-version/index.html
+++ b/app/last-minecraft-version/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minecraft最終バージョン</title>
+    <style>
+        h2{
+            display: inline;
+        }
+    </style>
 </head>
 <body>
-    <h2 style="display:inline">Java版：</h2><h2 id="je">アップデートを取得中...</h2>
-    <h2 style="display:inline">統合版：</h2><h2 id="be">アップデートを取得中...</h2>
+    <h2>Java版：</h2><h2 id="je">アップデートを取得中...</h2><br>
+    <h2>統合版：</h2><h2 id="be">アップデートを取得中...</h2>
     <script>
         // JSONを取得し処理する関数
         async function fetchAndProcessJSON() {
