--- a/app/last-minecraft-version/index.html
+++ b/app/last-minecraft-version/index.html
@@ -59,6 +59,8 @@
         // メイン処理を呼び出す
         fetchAndProcessJSON();
 
+        // ここから統合版
+        
         // GitHub APIのURL
         const apiUrl = "https://api.github.com/repos/Mojang/bedrock-samples/releases";
         
